[package]
name = "quekz-lockup"
version = "0.0.1-alpha"
description = "Program for migrating from metaplex to WNS"
edition = "2018"

[package.metadata.docs.rs]
tags = ["wns", "alpha", "solana", "token_extensions"]

[lib]
crate-type = ["cdylib", "lib"]
name = "quekz_lockup"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { git = "https://github.com/bridgesplit/anchor.git", features = ["interface-instructions", "init-if-needed"] }
anchor-spl = { git = "https://github.com/bridgesplit/anchor.git", features = ["token_2022_extensions", "token_2022"] }
spl-transfer-hook-interface = { version = "0.5.0" } 
spl-tlv-account-resolution = "0.4.0"
spl-pod = "0.1.0"
wen_new_standard = { path = "../../wen-new-standard/programs/wen_new_standard", features = ["cpi"] }
solana-program = "1.18.10"